refactor: add bad request response in specs
